[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tudelft-nes-ppu = "1.0.4"
tudelft-nes-test = "1.0.0"
env_logger = "0.9.0"
log = "0.4.17"

[profile.dev]
opt-level=1
debug = true

[profile.release]
opt-level=3
lto = true
debug = true
